# poetry-hash-test

./: .gitignore  Makefile  README.md  local-hash.txt
.github/workflows/: makefile.yml
consumer_package/: pyproject.toml
consumer_package/src/consumer_package/: main.py
my_local_package/: pyproject.toml
my_local_package/src/my_local_package/: main.py
windows-whl-content/my_local_package-0.1.0.dist-info/: METADATA  RECORD
